--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     />
   </head>
   <body>
-    <header>
+    <header class="flex justify-between items-center p-2 bg-[#FFFFFF] mx-5">
       <div>
-        <a href="">Goldsmiths - <span>University of London</span></a>
+        <a href="" class="text-2xl">Goldsmiths <br> <span class="text-sm pl-16 mt-0">University of London</span></a>
       </div>
-      <div>
-        <ul>
-          <li>
-            <img src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu-staff-students.svg" alt="" class="w-50 h-50">
+      <div >
+        <ul class="flex px-6">
+          <li class="px-6 text-2xl">
+            <img src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu-staff-students.svg" alt="" class="w-24 h-24">
           </li>
-          
+          <li class="px-6">
+            <img src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu-search.svg" alt="" class="w-24 h-24">
+          </li>
+          <li class="px-6">
+            <img src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu.svg" alt="" class="w-24 h-24">
+          </li>
         </ul>
       </div>
     </header>
