--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="flex justify-between items-center p-2 bg-[#FFFFFF] mx-5">
       <div>
-        <a href="" class="text-2xl">Goldsmiths <br> <span class="text-sm pl-16 mt-0">University of London</span></a>
+        <img src="https://www.gold.ac.uk/assets/img/svg/sprite/logo.svg" alt="">
       </div>
       <div >
         <ul class="flex px-6">
@@ -28,7 +28,11 @@
         </ul>
       </div>
     </header>
-
+<section>
+  <div>
+    <img src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/clearing-homepage-1-compressed.png" alt="">
+  </div>
+</section>
    
   </body>
 </html>
