--- a/index.html
+++ b/index.html
@@ -29,10 +29,52 @@
       </div>
     </header>
 <section>
-  <div>
-    <img src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/clearing-homepage-1-compressed.png" alt="">
+  <div class="">
+    <div class="">
+    <img src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/clearing-homepage-1-compressed.png" alt="" class="">
+    <img src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/CLEARED[79].svg" alt="" class="absolute top-64 left-[20%]  w-3/5">
+    <button class="py-3 px-9 bg-[#FED100] absolute top-[55%] left-[40%]">
+      <a href="">Apply now through clearing</a>
+    </button>
+  </div>
+    
   </div>
 </section>
-   
+
+<footer>
+  
+  <div>
+    <div>
+      <ul>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">About us</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
   </body>
 </html>
