--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </ul>
       </div>
     </header>
-<section>
+<section class="relative">
   <div class="">
     <div class="">
     <img src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/clearing-homepage-1-compressed.png" alt="" class="">
     <img src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/CLEARED[79].svg" alt="" class="absolute top-64 left-[20%]  w-3/5">
-    <button class="py-3 px-9 bg-[#FED100] absolute top-[55%] left-[40%]">
+    <button class="py-3 px-9 bg-[#FED100] absolute top-[55%] left-[40%] border-b-4 border-black">
       <a href="">Apply now through clearing</a>
     </button>
   </div>
@@ -41,8 +41,29 @@
   </div>
 </section>
 
+<section class=" bg-[#F6F7F7] p-24">
+  <div class="container mx-auto grid grid-cols-4 gap-5">
+    <div class="row-span-2 col-span-2">
+      <img src="https://www.gold.ac.uk/media/images-by-section/homepage/2023/homepage_hero_march_23.png" alt="">
+      <div class="drop-shadow-md absolute col-span-2 w-64 h-64 bg-white">
+
+      </div>
+    </div>
+    <div class="drop-shadow-md w-64 h-64 bg-white">
+
+    </div>
+    <div class="drop-shadow-md h-96 w-64 absolute top-[75%] left-[70%] bg-white  ">
+
+    </div>
+    <div class="col-span-2">
+      <img src="https://www.gold.ac.uk/media/images-by-section/course-finder/short-courses/Art-Psychotherapy-shows_-2015_11156.jpg" alt="">
+    </div>
+    <div></div>
+    <div></div>
+  </div>
+</section>
+
 <footer>
-  
   <div>
     <div>
       <ul>
