--- a/index.html
+++ b/index.html
@@ -12,90 +12,140 @@
   <body>
     <header class="flex justify-between items-center p-2 bg-[#FFFFFF] mx-5">
       <div>
-        <img src="https://www.gold.ac.uk/assets/img/svg/sprite/logo.svg" alt="">
+        <img
+          src="https://www.gold.ac.uk/assets/img/svg/sprite/logo.svg"
+          alt=""
+        />
       </div>
-      <div >
+      <div>
         <ul class="flex px-6">
           <li class="px-6 text-2xl">
-            <img src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu-staff-students.svg" alt="" class="w-24 h-24">
+            <img
+              src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu-staff-students.svg"
+              alt=""
+              class="w-24 h-24"
+            />
           </li>
           <li class="px-6">
-            <img src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu-search.svg" alt="" class="w-24 h-24">
+            <img
+              src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu-search.svg"
+              alt=""
+              class="w-24 h-24"
+            />
           </li>
           <li class="px-6">
-            <img src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu.svg" alt="" class="w-24 h-24">
+            <img
+              src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu.svg"
+              alt=""
+              class="w-24 h-24"
+            />
           </li>
         </ul>
       </div>
     </header>
-<section class="relative">
-  <div class="">
-    <div class="">
-    <img src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/clearing-homepage-1-compressed.png" alt="" class="">
-    <img src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/CLEARED[79].svg" alt="" class="absolute top-64 left-[20%]  w-3/5">
-    <button class="py-3 px-9 bg-[#FED100] absolute top-[55%] left-[40%] border-b-4 border-black">
-      <a href="">Apply now through clearing</a>
-    </button>
-  </div>
-    
-  </div>
-</section>
-
-<section class=" bg-[#F6F7F7] p-24">
-  <div class="container mx-auto grid grid-cols-4 gap-5">
-    <div class="row-span-2 col-span-2">
-      <img src="https://www.gold.ac.uk/media/images-by-section/homepage/2023/homepage_hero_march_23.png" alt="">
-      <div class="drop-shadow-md absolute col-span-2 w-64 h-64 bg-white">
-
+    <section class="relative">
+      <div class="">
+        <div class="">
+          <img
+            src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/clearing-homepage-1-compressed.png"
+            alt=""
+            class=""
+          />
+          <img
+            src="https://www.gold.ac.uk/media/images-by-section/study/clearing-and-adjustment/clearing-2023/CLEARED[79].svg"
+            alt=""
+            class="absolute top-[46%] left-[20%] w-3/5"
+          />
+          <button
+            class="py-3 px-9 bg-[#FED100] absolute top-[75%] left-[40%] border-b-4 border-black"
+          >
+            <a href="">Apply now through clearing</a>
+          </button>
+        </div>
       </div>
-    </div>
-    <div class="drop-shadow-md w-64 h-64 bg-white">
+    </section>
 
-    </div>
-    <div class="drop-shadow-md h-96 w-64 absolute top-[75%] left-[70%] bg-white  ">
+    <section class="bg-[#F6F7F7] p-24">
+      <div class="container mx-auto grid grid-cols-4 gap-5">
+        <div class="row-span-2 col-span-2 relative">
+          <img
+            src="https://www.gold.ac.uk/media/images-by-section/homepage/2023/homepage_hero_march_23.png"
+            alt=""
+          />
+        </div>
+        <div class="drop-shadow-md w-80 h-64 bg-white space-y-5">
+          <div class="flex flex-col px-5 text-center py-10 space-y-5">
+            <h1 class="text-xl black">Study at Goldsmiths</h1>
+            <p class="mb-16">Explore our guide to at Study at Goldsmiths</p>
+            <hr class="border border-1 border-gray px-5" />
+            <div class="flex justify-between mx-5">
+              <h1 class="text-sm black">Study at Goldsmiths</h1>
+              <img
+                src="https://www.gold.ac.uk/assets/img/svg/sprite/icon-more-666.svg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <div
+          class="drop-shadow-md h-96 w-64 absolute top-[75%] left-[75%] bg-white">
+        <div class="flex flex-col px-5 text-center py-10 space-y-5">
+          <h1 class="text-xl black">Goldsmiths University of London</h1>
+          <p class="mb-16">With world-leading research and high-quality teaching, we offer undergraduate and postgraduate degrees in the arts, humanities, social sciences, business, and computing from our campus in South East London.</p>
+          <hr class="border border-1 border-gray px-5" />
+          <div class="flex justify-between mx-5">
+            <h1 class="text-sm black">About Goldsmiths</h1>
+            <img
+              src="https://www.gold.ac.uk/assets/img/svg/sprite/icon-more-666.svg"
+              alt=""
+            />
+          </div>
+        </div>
+        </div>
+        <div class="col-span-2">
+          <img
+            src="https://www.gold.ac.uk/media/images-by-section/course-finder/short-courses/Art-Psychotherapy-shows_-2015_11156.jpg"
+            alt=""
+          />
+        </div>
 
-    </div>
-    <div class="col-span-2">
-      <img src="https://www.gold.ac.uk/media/images-by-section/course-finder/short-courses/Art-Psychotherapy-shows_-2015_11156.jpg" alt="">
-    </div>
-    <div></div>
-    <div></div>
-  </div>
-</section>
+        <div></div>
+      </div>
+    </section>
 
-<footer>
-  <div>
-    <div>
-      <ul>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-      </ul>
-    </div>
-    <div>
-      <ul>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-      </ul>
-    </div>
-    <div>
-      <ul>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-      </ul>
-    </div>
-    <div>
-      <ul>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">About us</a></li>
-      </ul>
-    </div>
-  </div>
-</footer>
+    <footer>
+      <div>
+        <div>
+          <ul>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">About us</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
