--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
             </div>
           </div>
         </div>
-        <div
-          class="drop-shadow-md h-96 w-64 absolute top-[75%] left-[75%] bg-white">
+        <div class="drop-shadow-md h-96 w-64 absolute top-[75%] left-[75%] bg-white">
         <div class="flex flex-col px-5 text-center py-10 space-y-5">
           <h1 class="text-xl black">Goldsmiths University of London</h1>
           <p class="mb-16">With world-leading research and high-quality teaching, we offer undergraduate and postgraduate degrees in the arts, humanities, social sciences, business, and computing from our campus in South East London.</p>
@@ -102,11 +101,25 @@
           </div>
         </div>
         </div>
-        <div class="col-span-2">
+        <div class="col-span-2 relative">
           <img
             src="https://www.gold.ac.uk/media/images-by-section/course-finder/short-courses/Art-Psychotherapy-shows_-2015_11156.jpg"
             alt=""
           />
+          <div class="drop-shadow-md w-64 h-48 absolute top-[33%] right-0 bg-white space-y-5">
+            <div class="flex flex-col px-5 text-center py-10 space-y-2">
+              <p class="">
+                Many of our short courses are available via live distance learning, so you can continue to learn online.</p>
+              <hr class="border border-1 border-gray px-5" />
+              <div class="flex justify-between mx-5">
+                <h1 class="text-sm black">Study at Goldsmiths</h1>
+                <img
+                  src="https://www.gold.ac.uk/assets/img/svg/sprite/icon-more-666.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
         </div>
 
         <div></div>
