--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 Clothing patent research reveals hidden history of women’s sport</p>
               <hr class="border border-1 border-gray px-5" />
               <div class="flex justify-between mx-5">
-                <h1 class="text-sm black">Study at Goldsmiths</h1>
+                <h1 class="text-sm black">Politics of Pantents</h1>
                 <img
                   src="https://www.gold.ac.uk/assets/img/svg/sprite/icon-more-666.svg"
                   alt=""
@@ -263,36 +263,39 @@
 
     </section>
 
-    <footer>
-      <div>
+    <footer class="  h-[20%]  bg-[#333333] text-white ">
+      <div class="container mx-auto flex justify-between items-center py-16">
         <div>
           <ul>
             <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
+            <li><a href="">Contact us</a></li>
+            <li><a href="">Find us</a></li>
+            <li><a href="">Jobs</a></li>
           </ul>
         </div>
         <div>
           <ul>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
+            <li><a href="">Accessibility statement</a></li>
+            <li><a href="">Cookie use</a></li>
+            <li><a href="">Copyright and disclaimer</a></li>
+            <li><a href="">Slavery and human trafficking statement</a></li>
           </ul>
         </div>
         <div>
           <ul>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
+            <li><a href="">-</a></li>
+            <li><a href="">Admin login</a></li>
           </ul>
         </div>
         <div>
-          <ul>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">About us</a></li>
+          <ul class="flex space-x-5">
+            <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i>
+            </a></li>
+            <li><a href=""><i class="fa fa-youtube-play" aria-hidden="true"></i>
+            </a></li>
           </ul>
         </div>
       </div>
