--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@
 
     <section class="bg-[#F6F7F7] p-24">
       <div class="container mx-auto grid grid-cols-4 gap-5">
-        <div class="row-span-2 col-span-2 relative">
+        <div class="relative row-span-2 col-span-2 ">
           <img
             src="https://www.gold.ac.uk/media/images-by-section/homepage/2023/homepage_hero_march_23.png"
             alt=""
           />
+          <div class="absolute drop-shadow-md w-5/6 left-20 h-32 bottom-[10%] px-5  bg-white">
+
+          </div>
         </div>
         <div class="drop-shadow-md w-80 h-64 bg-white space-y-5">
           <div class="flex flex-col px-5 text-center py-10 space-y-5">
