--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
           />
           <div class="absolute drop-shadow-md w-5/6 left-20 h-32 bottom-[10%] px-5  bg-white">
 
+            <h1>
+              Postgraduate degrees
+              </h1>
+              <p>Explore our degrees in subjects covering the arts, humanities, social sciences, cultural studies, computing, and entrepreneurial business and management.</p>
+
           </div>
         </div>
         <div class="drop-shadow-md w-80 h-64 bg-white space-y-5">
