--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             src="https://www.gold.ac.uk/media/images-by-section/homepage/2023/homepage_hero_march_23.png"
             alt=""
           />
-          <div class="absolute drop-shadow-md w-5/6 left-20 h-32 bottom-[10%] px-5  bg-white">
+          <div class="absolute drop-shadow-md w-5/6 left-20 h-32 bottom-[10%] px-5 text-center space-y-5  bg-white">
 
             <h1>
               Postgraduate degrees
